# sa-firmware

./: .gitignore  README.md  writeaddr
dwt_estimate/: CMakeLists.txt  main.c  nrf_deca.c
firmware/: CMakeLists.txt  JLinkCmd  README.md  accel.c  accel.h  address_handler.c  address_handler.h  data_format.h  dwm_utils.c  dwm_utils.h  impl_anchor.c  impl_anchor.h  impl_observer.c  impl_tag.c  impl_tag.h  log.h  main.c  messages.h  ranging.c  ranging.h  ranging_anchor.c  ranging_anchor.h  timing.h  uart.c  uart.h  utils.c  utils.h
firmware/ble/: accel_service.c  accel_service.h  ble_func.c  ble_func.h  ranging_service.c  ranging_service.h
firmware/config/: custom_board.h  sdk_config.h
firmware/ld.script/: ld_softdevice.ld  sdk_config.h
observer/: CMakeLists.txt  aggregate.cpp  dump.h  dump_hex.cpp  dump_hex.h  dump_std.cpp  json.cpp  json.h  main.cpp
observer_decoder/: CMakeLists.txt  aggregate.cpp  aggregate.h  dump.cpp  dump_std.cpp  dump_std.h  main.c  main.cpp  utils.h
process_ts/: CMakeLists.txt  main.cpp
